(refs #1635)Fix scrollbar issue

--- a/src/main/webapp/assets/common/css/gitbucket.css
+++ b/src/main/webapp/assets/common/css/gitbucket.css
@@ -1,6 +1,8 @@
 /****************************************************************************/
 /* Common */
 /****************************************************************************/
+.wrapper { position: static; }
+
 body {
   color: #333;
 }
